@@ -1,6 +1,7 @@
 -------------------------------------------------------------------------------------------------------
 Release notes version 1.8.1_beta : Enhancements, modifications and corrected bugs since version 1.8.0 :
 -------------------------------------------------------------------------------------------------------
+19/05/20 (TRUST)  Portability : Latest OpenMPI version downloaded by "./configure -force_latest_openmpi" bumped from 2.13 to 4.0.3
 19/05/20 (TRUST)  Bug fixed   : Allow different beginning/ending times for statistics and fix bug in case of resumption whith statistics
 12/05/20 (TRUST)  Portability : Ubuntu version 19-20 OS are now supported
 05/05/20 (TRUST)  Tools       : ICoCo tutorial updated ($TRUST_ROOT/doc/TRUST/ICoCo_tutorial.pdf)
